# DevNotesApp

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: database.py  enums.py  main.py
backend/app/api/: deps.py  imports.py  notes.py  search.py  tags.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py  note.py  note_tag.py  tag.py
backend/app/repositories/: __init__.py  base.py  note.py  tag.py
backend/app/schemas/: common.py  note.py  tag.py
backend/app/services/: __init__.py  importer.py  note.py  search.py  tag.py
backend/tests/: conftest.py  test_health.py  test_imports.py  test_note_tags.py  test_notes.py  test_search.py  test_tags.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  imports.ts  index.ts  notes.ts  search.ts  tags.ts  types.ts
frontend/src/components/EditorToolbar/: EditorToolbar.module.css  EditorToolbar.tsx
frontend/src/components/Layout/: Layout.module.css  Layout.tsx
frontend/src/components/Modal/: Modal.module.css  (+1 more)
frontend/src/styles/: global.css  variables.css
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-statefulset.yaml  secrets.yaml  setup-cluster.sh
specs/: devnotes_backend_refactor_spec.md  devnotes_ui_spec.md
(+18 files in other folders)
