[project]
name = "devnotes"
version = "0.1.0"
description = "Personal knowledge management system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "asyncpg",
    "pydantic>=2.0",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "greenlet",
]
