[project]
name = "devnotes"
version = "0.1.0"
description = "Personal knowledge management system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "asyncpg",
    "pydantic>=2.0",
    "python-dotenv",
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "greenlet",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
